--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     
                     <div class="textHead">
                     "Taste the Flame. Pure. Pristine. Perfect." <br><br>
-                    <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
+                    <i class="fa-solid fa-skull"></i>&nbsp;<i class="fa-solid fa-skull"></i>&nbsp;<i class="fa-solid fa-skull"></i>&nbsp;<i class="fa-solid fa-skull"></i>&nbsp;<i class="fa-solid fa-skull"></i>
                     </div>
                     
             </div>
