--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                       <span>Warning! </span>Digital Success Ahead.</h1><br>
                     
                      <div class="scene">
-                        <div class="text" id="animatedText">Digital Success Story</div>
+                        <div class="text" id="animatedText">Modern Designs</div>
                       </div>
                     
                     <div class="textHead">
