--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Jarno Kiimala | AI POWER FOR BUSINESSES</title>
+    <title>Jarno Kiimala | AI POWERED SOLUTIONS</title>
 
     
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <meta name="google-site-verification" content="X73pKd22sUMAi-ti_wOb3d_HwjY92Vx-km-NPkTQUqc">
 </head>
