--- a/index.html
+++ b/index.html
@@ -1268,7 +1268,7 @@
                                     <span>Expertise</span>
                                 </div>
                                 <p>
-                                    Web Development • Artificial Intelligence
+                                    Web Development • AI
                                 </p>
                             </div>
                         </div>
