--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• Let's create something AMAZING together •</p>
+                            <p style="color:var(--color-secondary)">• 4 Business Success •</p>
                         
                         <div class="contact-info">
                             <div class="contact-item">
@@ -1240,7 +1240,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Finland • Global • Online • EU Citizen
+                                    Finland • Global • Online
                                 </p>
                             </div>
                             <div class="contact-item">
