--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
                     <div class="left-contact">
                         <h4>Get Connected!</h4>
                         <p>
-                            <p style="color:var(--color-secondary)">• 4 Business Success •</p>
+                            <p style="color:var(--color-secondary)">• 4 Absolut Business Success •</p>
                         
                         <div class="contact-info">
                             <div class="contact-item">
