--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                     <img src="img/MIT.webp" alt="The Massachusetts Institute of Technology (MIT) - Jarno Kiimala - Lean Six Sigma">
                     <p>
                         The Fundamental Principles, Practices and Tools of Lean 
-                        Six Sigma Methods That Underlay Modern Organizational Productivity Approaches 
-                        Applied in Aerospace, Automotive, Health Care, and Other Sectors.
+                        Six Sigma Methods That Underlay Modern Organizational Productivity Approaches. 
                     </p>
                 </div>
 
