--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 
                 
                 <div class="image" id="image"> 
-                    <img src="img/AIpic.webp" id="main-image" alt="Jarno Kiimala | Strategic Project Management - Successful Projects and Initiatives">
+                    <img src="img/Free.webp" id="main-image" alt="Jarno Kiimala | Strategic Project Management - Successful Projects and Initiatives">
                 </div>
             </div>
             <div class="right-header">
