--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="main-title">
                         
                     </div>
-                    <h4 class="stat-title">Occupational Soft Skills</h4>
+                    <h4 class="stat-title">Modern Workplace Soft Skills</h4>
                     <div class="blogs">  
 
                     <div class="blog">
@@ -184,7 +184,7 @@
                                 Decision Intelligence
                             </h4>
                             <p>
-                            Data, Analytics, Artificial Intelligence, human Expertise, Automation
+                            Data Analytics, Artificial Intelligence, Time Management, Teamwork
                             </p>
                         </div>
                     </div></div>
@@ -201,7 +201,7 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <!-- <p class="tl-duration">2023</p> -->
-                    <h5>Python Programming<span> - The University of Helsinki | The Department of Computer Science</span></h5>
+                    <h5>Python Programming<span> - The University of Helsinki | The Department of CS</span></h5>
                     <img src="img/unihki.webp" alt="University of Helsinki - Jarno Kiimala - Python">
                     <p>
                         MOOC 1-7 & 8-14 | Introduction to Python Programming + Advanced Course
