--- a/index.html
+++ b/index.html
@@ -194,7 +194,18 @@
             <h4 class="stat-title">Degrees & Continuing Education</h4>
 
                                 
-            <div class="timeline">
+             <div class="timeline">
+
+                <!--<div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-briefcase"></i>
+                    </div>
+                    <h5>FullStack Developer<span> - freeCodeCamp | Online Course</span></h5>
+                    <img src="img/freeCodeCamp.webp" alt="freeCodeCamp - Jarno Kiimala - FullStack Developer">
+                    <p>
+                        HTML5, CSS3, JavaScript, 
+                    </p>
+                </div> -->
 
                 <div class="timeline-item">
                     <div class="tl-icon">
