--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <h5>FullStack Developer<span> - freeCodeCamp | Online Course</span></h5>
                     <img src="img/freeCodeCamp.webp" alt="freeCodeCamp - Jarno Kiimala - FullStack Developer">
                     <p>
-                        HTML5, CSS3, JavaScript, 
+                        HTML5, CSS3, JavaScript, React, Node.js, Next.js, TypeScript, SQL Databases, Express.js, UI Design and Testing
                     </p>
                 </div> -->
 
@@ -1424,7 +1424,7 @@
                                     <span>Email</span>
                                 </div>
                                 <p style="color:var(--color-secondary)">
-                                    jarno.kiimala&commat;gmail.com
+                                    jarno.kiimala&commat;proton.me
                                 </p>
                             </div>
                             <div class="contact-item">
