--- a/index.html
+++ b/index.html
@@ -1397,7 +1397,7 @@
             <div class="contact-container">
                 <div class="main-title">
 
-                    <h2><span>The key </span> to wealth!<span class="bg-text"></span></h2>
+                    <h2><span>Contact </span> Information!<span class="bg-text"></span></h2>
                     <h2><br></span><span><i class="fa-solid fa-sack-dollar fa-xl" aria-hidden="true"></i></span><span class="bg-text"></span></h2>
                 </div>
                 
