--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="blogs">  
 
                     <div class="blog">
-                        <img src="img/emotional.webp" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/crea.gif" id="crea" alt="Jarno Kiimala - Emotional Intelligence">
                         <div class="blog-text">
                             <h4>
                                 Emotional Intelligence
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/critical.webp" alt="Jarno Kiimala - Critical Thinking">
+                        <img src="img/think.gif" id="think" alt="Jarno Kiimala - Critical Thinking">
                         <div class="blog-text">
                             <h4>
                                 Critical Thinking
@@ -141,7 +141,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/solving.webp" alt="Jarno Kiimala - Problem Solving">
+                        <img src="img/problem.gif" id="problem" alt="Jarno Kiimala - Problem Solving">
                         <div class="blog-text">
                             <h4>
                                 Problem Solving
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/learn.webp" alt="Jarno Kiimala - Learning Agility">
+                        <img src="img/adaptability.gif" id="ada" alt="Jarno Kiimala - Learning Agility">
                         <div class="blog-text">
                             <h4>
                                 learning agility
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/communication.webp" alt="Jarno Kiimala - Interpersonal Skills">
+                        <img src="img/person.gif" id="person" alt="Jarno Kiimala - Interpersonal Skills">
                         <div class="blog-text">
                             <h4>
                                 interpersonal skills
@@ -178,7 +178,7 @@
 
 
                     <div class="blog">
-                        <img src="img/decision.webp" alt="Jarno Kiimala - Decision Intelligence">
+                        <img src="img/time.gif" id="time" alt="Jarno Kiimala - Decision Intelligence">
                         <div class="blog-text">
                             <h4>
                                 Decision Intelligence
