--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                 Emotional Intelligence
                             </h4>
                             <p>
-                            Social Skills, Self-Awareness, Self-Regulation, Empathy, Motivation
+                            Social Skills, Creativity, Empathy, Motivation
                             </p>
                         </div>
                     </div>
