--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="blogs">  
 
                     <div class="blog">
-                        <img src="img/crea.gif" id="crea" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/creativity.gif" id="crea" alt="Jarno Kiimala - Emotional Intelligence">
                         <div class="blog-text">
                             <h4>
                                 Emotional Intelligence
@@ -159,7 +159,7 @@
                                 learning agility
                             </h4>
                             <p>
-                            Growth Mindset, Motivation, Adaptability, Flexibility
+                            Growth Mindset, Adaptability, Competence, Flexibility
                             </p>
                         </div>
                     </div>
