--- a/index.html
+++ b/index.html
@@ -194,26 +194,62 @@
             <div class="blogs">  
 
                     <div class="blog">
-                        <img src="img/creativity.gif" id="crea" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/film.gif" id="film" alt="Jarno Kiimala - Emotional Intelligence">
                         <div class="blog-text">
                             <h4>
-                                Video Shoot & Editing
+                                Video Shoots
                             </h4>
                             <p>
-                            Social Skills, Creativity, Empathy, Motivation
+                            Video Camera Shoots
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/edit.gif" id="edit" alt="Jarno Kiimala - Emotional Intelligence">
+                        <div class="blog-text">
+                            <h4>
+                                Video Editing
+                            </h4>
+                            <p>
+                            Adobe CC Premiere Pro & CapCut
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/photo.gif" id="photo" alt="Jarno Kiimala - Emotional Intelligence">
+                        <div class="blog-text">
+                            <h4>
+                                Photo Editing
+                            </h4>
+                            <p>
+                            Adobe CC Photoshop
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/vector.gif" id="vector" alt="Jarno Kiimala - Emotional Intelligence">
+                        <div class="blog-text">
+                            <h4>
+                                Vector Graphics
+                            </h4>
+                            <p>
+                            Adobe CC Illustrator CC
                             </p>
                         </div>
                     </div>
 
 
                     <div class="blog">
-                        <img src="img/time.gif" id="time" alt="Jarno Kiimala - Decision Intelligence">
+                        <img src="img/vfx.gif" id="vfx" alt="Jarno Kiimala - Decision Intelligence">
                         <div class="blog-text">
                             <h4>
-                                Adobe After Effects CG
+                                2D Animations & VFX
                             </h4>
                             <p>
-                            Data Analytics, Artificial Intelligence, Time Management, Teamwork
+                            Adobe CC After Effects
                             </p>
                         </div>
                     </div></div>
