--- a/index.html
+++ b/index.html
@@ -117,13 +117,13 @@
                     <div class="blogs">  
 
                     <div class="blog">
-                        <img src="img/creativity.gif" id="crea" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/creativity.gif" id="crea" alt="Jarno Kiimala - Innovation">
                         <div class="blog-text">
                             <h4>
-                                Emotional Intelligence
+                                Innovation & VISION
                             </h4>
                             <p>
-                            Social Skills, Creativity, Empathy, Motivation
+                            Driving progress and bringing new and imaginative ideas into reality.
                             </p>
                         </div>
                     </div>
@@ -177,11 +177,12 @@
                     </div>
 
 
+
                     <div class="blog">
                         <img src="img/time.gif" id="time" alt="Jarno Kiimala - Decision Intelligence">
                         <div class="blog-text">
                             <h4>
-                                Decision Intelligence
+                                Decision Making
                             </h4>
                             <p>
                             Data Analytics, Artificial Intelligence, Time Management, Teamwork
@@ -194,22 +195,22 @@
             <div class="blogs">  
 
                     <div class="blog">
-                        <img src="img/film.gif" id="film" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/film.gif" id="film" alt="Jarno Kiimala - Video Shoots">
                         <div class="blog-text">
                             <h4>
                                 Video Shoots
                             </h4>
                             <p>
-                            Video Camera Shoots
+                            Developing a narrative and planning the visual flow of the project. 
                             </p>
                         </div>
                     </div>
 
                     <div class="blog">
-                        <img src="img/edit.gif" id="edit" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/edit.gif" id="edit" alt="Jarno Kiimala - Video Editing">
                         <div class="blog-text">
                             <h4>
-                                Video Editing
+                                Video & AUDIO Editing
                             </h4>
                             <p>
                             Adobe CC Premiere Pro & CapCut
@@ -218,10 +219,10 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/photo.gif" id="photo" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/photo.gif" id="photo" alt="Jarno Kiimala - Photo Editing & Design">
                         <div class="blog-text">
                             <h4>
-                                Photo Editing
+                                Photo Editing & Design
                             </h4>
                             <p>
                             Adobe CC Photoshop
@@ -230,20 +231,32 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/vector.gif" id="vector" alt="Jarno Kiimala - Emotional Intelligence">
+                        <img src="img/vector.gif" id="vector" alt="Jarno Kiimala - Vector Graphics">
                         <div class="blog-text">
                             <h4>
                                 Vector Graphics
                             </h4>
                             <p>
-                            Adobe CC Illustrator CC
+                            Adobe CC Illustrator CC, Creating visual elements
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="blog">
+                        <img src="img/print.gif" id="vector" alt="Jarno Kiimala - Screen Printing">
+                        <div class="blog-text">
+                            <h4>
+                                Screen Printing
+                            </h4>
+                            <p>
+                            Silk Screen Printing
                             </p>
                         </div>
                     </div>
 
 
                     <div class="blog">
-                        <img src="img/vfx.gif" id="vfx" alt="Jarno Kiimala - Decision Intelligence">
+                        <img src="img/vfx.gif" id="vfx" alt="Jarno Kiimala - 2D Animations & VFX">
                         <div class="blog-text">
                             <h4>
                                 2D Animations & VFX
@@ -537,11 +550,8 @@
                                 Muutosmuotoilutoimisto
                             </h4>
                             <p>
-                                ▪ Superpowers and Tools for Transformational Design
-                                ▪ Service and Product Design
-                                ▪ Digitalization and Web Design
-                                ▪ Business Design
-                                ▪ Creating added Value for the Customer
+                                Superpowers and Tools for Transformational Design, Service and Product Design, 
+                                Digitalization and Web Design, Business Design, Creating added Value for the Customer
                             </p>
                         </div>
                     </div>
@@ -586,12 +596,8 @@
                                 Faros & COM
                             </h4></a>
                             <p>
-                            ▪ Corporate marketing and content production
-                            ▪ Budgeting and profitability calculations
-                            ▪ Service pricing and monitoring
-                            ▪ WordPress website publishing
-                            ▪ Project expertise
-                            ▪ Surveys
+                            Corporate marketing and content production, Budgeting and profitability calculations, Service pricing and monitoring, 
+                            WordPress website publishing, Project expertise, Surveys
                             </p>
                         </div>
                     </div>
