--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     <div class="blogs">  
 
                     <div class="blog">
-                        <img src="img/creativity.gif" id="crea" alt="Jarno Kiimala - Innovation">
+                        <img src="img/creativity1.gif" id="crea" alt="Jarno Kiimala - Innovation">
                         <div class="blog-text">
                             <h4>
                                 Innovation & VISION
@@ -129,7 +129,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/think.gif" id="think" alt="Jarno Kiimala - Critical Thinking">
+                        <img src="img/think1.gif" id="think" alt="Jarno Kiimala - Critical Thinking">
                         <div class="blog-text">
                             <h4>
                                 Critical Thinking
@@ -141,7 +141,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/problem.gif" id="problem" alt="Jarno Kiimala - Problem Solving">
+                        <img src="img/problem1.gif" id="problem" alt="Jarno Kiimala - Problem Solving">
                         <div class="blog-text">
                             <h4>
                                 Problem Solving
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/adaptability.gif" id="ada" alt="Jarno Kiimala - Learning Agility">
+                        <img src="img/adaptability1.gif" id="ada" alt="Jarno Kiimala - Learning Agility">
                         <div class="blog-text">
                             <h4>
                                 learning agility
@@ -165,7 +165,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/person.gif" id="person" alt="Jarno Kiimala - Interpersonal Skills">
+                        <img src="img/person1.gif" id="person" alt="Jarno Kiimala - Interpersonal Skills">
                         <div class="blog-text">
                             <h4>
                                 interpersonal skills
@@ -179,7 +179,7 @@
 
 
                     <div class="blog">
-                        <img src="img/time.gif" id="time" alt="Jarno Kiimala - Decision Intelligence">
+                        <img src="img/time1.gif" id="time" alt="Jarno Kiimala - Decision Intelligence">
                         <div class="blog-text">
                             <h4>
                                 Decision Making
@@ -195,7 +195,7 @@
             <div class="blogs">  
 
                     <div class="blog">
-                        <img src="img/film.gif" id="film" alt="Jarno Kiimala - Video Shoots">
+                        <img src="img/film1.gif" id="film" alt="Jarno Kiimala - Video Shoots">
                         <div class="blog-text">
                             <h4>
                                 Video Shoot & Storyboard
@@ -207,7 +207,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/edit.gif" id="edit" alt="Jarno Kiimala - Video Editing">
+                        <img src="img/edit1.gif" id="edit" alt="Jarno Kiimala - Video Editing">
                         <div class="blog-text">
                             <h4>
                                 Video & AUDIO Editing
@@ -219,7 +219,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/photo.gif" id="photo" alt="Jarno Kiimala - Photo Editing & Design">
+                        <img src="img/photo1.gif" id="photo" alt="Jarno Kiimala - Photo Editing & Design">
                         <div class="blog-text">
                             <h4>
                                 Photo Editing & Design
@@ -231,7 +231,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/vector.gif" id="vector" alt="Jarno Kiimala - Vector Graphics">
+                        <img src="img/vector1.gif" id="vector" alt="Jarno Kiimala - Vector Graphics">
                         <div class="blog-text">
                             <h4>
                                 Vector Graphics
@@ -243,7 +243,7 @@
                     </div>
 
                     <div class="blog">
-                        <img src="img/print.gif" id="vector" alt="Jarno Kiimala - Screen Printing">
+                        <img src="img/print1.gif" id="vector" alt="Jarno Kiimala - Screen Printing">
                         <div class="blog-text">
                             <h4>
                                 Screen Printing
@@ -256,7 +256,7 @@
 
 
                     <div class="blog">
-                        <img src="img/vfx.gif" id="vfx" alt="Jarno Kiimala - 2D Animations & VFX">
+                        <img src="img/vfx1.gif" id="vfx" alt="Jarno Kiimala - 2D Animations & VFX">
                         <div class="blog-text">
                             <h4>
                                 2D Animations & VFX
