--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                                 Screen Printing
                             </h4>
                             <p>
-                            Silk Screen Printing
+                            Silk Screen Printing, Foil Printing & Embroidery
                             </p>
                         </div>
                     </div>
@@ -496,7 +496,7 @@
                                 IMS
                             </h4>
                             <p>
-                                Electronics Testing Process Operations of Acer Products. Tilburg | The Netherlands
+                                Electronics Testing Process Operations of Acer Products.
                             </p>
                         </div>
                     </div>
@@ -510,7 +510,7 @@
                                 Tamora Oy
                             </h4></a>
                             <p>
-                                Online Change & Business Design Projects. Helsinki | Finland
+                                Online Change & Business Design Projects.
                             </p>
                         </div>
                     </div><div class="blog">
@@ -524,7 +524,7 @@
                             </h4></a>
                             <p>
                                 Marketing Research of Steel
-                                Abrasive Blast Room and Powder Coat Booth. Tornio | Finland
+                                Abrasive Blast Room and Powder Coat Booth.
                             </p>
                         </div>
                     </div>
@@ -534,10 +534,10 @@
                         <img src="img/lnp.webp" alt="Jarno Kiimala - LNP Engineering Plastics">
                         <div class="blog-text">
                             <h4>
-                                LNP Engineering Plastics
+                                LNP Engineering
                             </h4>
                             <p>
-                                Thermocomp Compound Production Process Operations. Raamsdonksveer | The Netherlands
+                                Thermocomp Compound Production Process Operations.
                             </p>
                             
                         </div>
@@ -550,8 +550,8 @@
                                 Muutosmuotoilutoimisto
                             </h4>
                             <p>
-                                Superpowers and Tools for Transformational Design, Service and Product Design, 
-                                Digitalization and Web Design, Business Design, Creating added Value for the Customer
+                                Superpowers and tools for Transformational Design, Service and Product Design, 
+                                Digitalization and Web Design, Creating added value for the customer
                             </p>
                         </div>
                     </div>
@@ -565,7 +565,7 @@
                                 Arctic Design Week
                             </h4></a>
                             <p>
-                                Lönnrot Project. 1000 Tales from Finland. Shortfilm about yakutian man living by the Lake Inari. Rovaniemi | Finland
+                                Lönnrot Project. 1000 Tales from Finland. Shortfilm about yakutian man living by the Lake Inari.
                             </p>
                         </div>
                     </div>
@@ -581,7 +581,7 @@
                                 NOKIA
                             </h4></a>
                             <p>
-                                Manufacturing Process of NOKIA mobile phones. Salo | Finland
+                                Manufacturing Process of NOKIA mobile phones.
                             </p>
                         </div>
                     </div>
@@ -596,8 +596,8 @@
                                 Faros & COM
                             </h4></a>
                             <p>
-                            Corporate marketing and content production, Budgeting and profitability calculations, Service pricing and monitoring, 
-                            WordPress website publishing, Project expertise, Surveys
+                            Marketing and content creation, budgeting and profitability, service pricing and monitoring, 
+                            WordPress websites, Project expertise, Surveys
                             </p>
                         </div>
                     </div>
@@ -610,7 +610,7 @@
                                 IMS
                             </h4>
                             <p>
-                                Electronics Testing Process Operations of IBM Products. Tilburg | The Netherlands
+                                Electronics Testing Process Operations of IBM Products.
                             </p>
                         </div>
                     </div>
@@ -641,10 +641,8 @@
                                 Prime Sales
                             </h4></a>
                             <p>
-                            ▪ Solution Selling
-                            ▪ Best Salesperson in the Company
-                            ▪ Several Dozen Customer Contacts Daily
-                            ▪ Negotiation skills, customer communication
+                            Solution Selling, Best Salesperson in the Company, 
+                            Customer Contacts Daily, Negotiation skills
                             </p>
                         </div>
                     </div>
