--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                                 Tamora Oy
                             </h4></a>
                             <p>
-                                Online Change & Business Design Projects.
+                                Online Change, Business & Digitalization Design Projects.
                             </p>
                         </div>
                     </div><div class="blog">
@@ -537,7 +537,7 @@
                                 LNP Engineering
                             </h4>
                             <p>
-                                Thermocomp Compound Production Process Operations.
+                                Thermocomp Compound Production Process Operations. Eliminate wastefulness in production process with maximum efficiency.
                             </p>
                             
                         </div>
@@ -657,7 +657,7 @@
                                 Hogpoint Oy
                             </h4></a>
                             <p>
-                                Marketing, Sales and Surfacing of Metal Products. Oulainen | Finland
+                                Marketing, Sales and Surfacing of Metal Products.
                             </p>
                         </div>
                     </div>
