--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
-    <title>Jarno Kiimala | AI Powered FullStack Development & Digital Solutions</title>
+    <title>Jarno Kiimala | FullStack Developer & Industrial Management Engineer | AI POWERED Solutions</title>
 
     
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
