--- a/index.html
+++ b/index.html
@@ -1485,7 +1485,7 @@
                                     <span>Location</span>
                                 </div>
                                 <p>
-                                    Korvatunturi • Global • Online
+                                    FINLAND • Global • Online
                                 </p>
                             </div>
                             <div class="contact-item">
