--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                 IMS
                             </h4>
                             <p>
-                                Electronics Testing Process Operations of Acer Products.
+                                Electronics Testing Process Operations of Acer Products. Daily workplace communication in English.
                             </p>
                         </div>
                     </div>
@@ -510,7 +510,7 @@
                                 Tamora Oy
                             </h4></a>
                             <p>
-                                Online Change, Business & Digitalization Design Projects.
+                                Online Change, Business & Digitalization Design Projects Carried Out in Diverse Teams.
                             </p>
                         </div>
                     </div><div class="blog">
@@ -581,7 +581,7 @@
                                 NOKIA
                             </h4></a>
                             <p>
-                                Manufacturing Process of NOKIA mobile phones.
+                                Manufacturing Process of NOKIA mobile phones in diverse multicultural teams.
                             </p>
                         </div>
                     </div>
@@ -610,7 +610,7 @@
                                 IMS
                             </h4>
                             <p>
-                                Electronics Testing Process Operations of IBM Products.
+                                Electronics Testing Process Operations of IBM Products. Daily workplace communication in English.
                             </p>
                         </div>
                     </div>
@@ -624,7 +624,7 @@
                                 Tommy Bartlett Thrill Show
                             </h4></a>
                             <p>
-                                Wisconsin-Dells, WI, U.S.A.
+                                Daily workplace communication in English. Wisconsin-Dells, WI, U.S.A.
                             </p>
                         </div>
                     </div>
@@ -757,7 +757,7 @@
                                 Yle Sápmi
                             </h4>
                             <p>
-                                Sound Monitoring Project. Inari | Finland
+                                Sound Monitoring Project at YLE Studio. Unna Junná Production Team. Inari | Finland
                             </p>
                         </div>
                     </div>
