--- a/index.html
+++ b/index.html
@@ -837,10 +837,10 @@
                         <img src="img/vibecoder.webp" id="vfx" alt="Jarno Kiimala - VibeCoding">
                         <div class="blog-text">
                             <h4>
-                                Web development & Design
+                                Web Development & Design
                             </h4>
                             <p>
-                            Visual Studio Code, WordPress, Figma, Working effectively with teams, AI
+                            Visual Studio Code, WordPress, Figma, Working effectively with teams
                             </p>
                         </div>
                     </div></div>
