--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Jarno Kiimala | AI Powered Full Stack Development</title>
 
 
-
+    <link rel="canonical" href="https://jkiimala.github.io/">
     <link rel="apple-touch-icon" sizes="152x152" href="https://img.icons8.com/color/152x152/anonymous-mask.png">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
     <link rel="stylesheet" href="styles/styles.css">
