--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 
     
     <meta name="description" content="Artificial Intelligence, Web Development, Industrial Engineering, Strategic Project Management">
-    <meta name="keywords" content="Tekoäly, AI, Software Developer, koodari, full-stack, insinööri, tuotantotalous, Digitaalinen Media, Luova Sisällöntuotanto">
+    <meta name="keywords" content="Tekoäly, AI, Verkkosivustojen kehitys, Verkkosivustojen suunnittelupalvelut, HTML, CSS, JavaScript, WordPress,
+    Verkkokauppasivustojen kehitys, Responsiivinen verkkosuunnittelu, SEO (Search Engine Optimization), Software Developer, koodari, Tornio, Suomi, Finland, Oulu, full-stack, insinööri, tuotantotalous, Digitaalinen Media, Luova Sisällöntuotanto">
     <meta name="author" content="Jarno Kiimala">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
