--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     
-    <meta name="description" content="Artificial Intelligence, Web Development, Industrial Engineering, Strategic Project Management">
+    <meta name="description" content="Artificial Intelligence, AI Powered Full Stack Web Development, 3D Modeling - SolidWorks - Inventor Pro, Industrial Engineering, Strategic Project Management">
     <meta name="keywords" content="Tekoäly, AI, Verkkosivustojen kehitys, Verkkosivustojen suunnittelupalvelut, HTML, CSS, JavaScript, WordPress,
     Verkkokauppasivustojen kehitys, Responsiivinen verkkosuunnittelu, SEO (Search Engine Optimization), Software Developer, koodari, Tornio, Suomi, Finland, Oulu, full-stack, insinööri, tuotantotalous, Digitaalinen Media, Luova Sisällöntuotanto">
     <meta name="author" content="Jarno Kiimala">
